# itmohack4days

./: .gitignore  Dockerfile  Makefile  docker-compose.yml  openapi.json  pyproject.toml  schema.sql
app/api/v1/: api.py  files.py
app/compat/: shims.py
app/core/: config.py  llm.py
app/core/langgraph/: graph.py
app/core/prompts/: __init__.py
app/models/: database.py  file.py
app/services/: c1.py  classifier.py  database.py  embeddings.py  parser.py  s3.py  yandex.py
app/utils/: graph.py
demo_1c/: docker-compose.yml
demo_1c/backend/: Dockerfile  pyproject.toml
demo_1c/backend/app/: deps.py  main.py
demo_1c/frontend/: .dockerignore  .gitignore  Dockerfile  README.md
demo_1c/frontend/app/: globals.css  layout.tsx  page.tsx
evals/: evaluator.py
front_testy/: README.md  env.d.ts  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
front_testy/src/: main.tsx
front_testy/src/ui/: ActionLog.tsx  App.tsx  CenterPane.tsx  FindingsPane.tsx  InfoPane.tsx  Sidebar.tsx  UploadPane.tsx  mockData.ts  styles.css
frontend/: README.md  middleware.ts  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/chat/: page.tsx
frontend/components/auth/: LoginForm.tsx  RegisterForm.tsx
frontend/components/chat/: ChatArea.tsx  ChatInput.tsx  Message.tsx  MessageList.tsx
frontend/context/: AuthContext.tsx
frontend/hooks/: useAuth.ts  useChat.ts  useSessions.ts
frontend/lib/: api.ts  cookies.ts  types.ts
scripts/: build-docker.sh  docker-entrypoint.sh  run-docker.sh
(+13 files in other folders)
