[project]
name = "demo-backend"
version = "0.1.0"
description = "FastAPI backend storing arbitrary JSON in MongoDB"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "motor>=3.4.0",
  "pydantic>=2.7.0",
]

[project.scripts]
start = "uvicorn app.main:app"


